# rustom

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  final_check.txt  final_final.txt  wrapper_check.txt
.github/workflows/: ci.yml
db/migrations/: 20260612000000_create_users.sql
db/seeds/: 20260612000001_seed_users.sql
migrations/: 20260612000000_create_users.sql
src/: app_state.rs  errors.rs  extractors.rs  lib.rs  main.rs  router.rs  utils.rs
src/api/: mod.rs
src/api/handlers/: auth.rs  job.rs  mod.rs  user.rs
src/api/middleware/: auth.rs  mod.rs  rbac.rs
src/config/: mod.rs  routes.rs
src/config/data/: roles.yml  statuses.yml
src/controllers/api/: mod.rs
src/controllers/api/v1/: mod.rs  registration_controller.rs  sessions_controller.rs  users_controller.rs
src/docs/: mod.rs
src/domain/: errors.rs  models.rs
src/infrastructure/: mod.rs  postgres.rs  rabbitmq.rs  redis.rs
src/middleware/: api_gateway.rs  auth.rs  mod.rs  payload_encryption.rs
src/models/: mod.rs  user.rs
src/policies/: mod.rs  user_policy.rs
src/queries/: mod.rs  user.rs
src/serializers/: user_serializer.rs
src/services/: cache.rs  encryption_service.rs  mod.rs  queue.rs  slack_notification.rs  user.rs
src/utils/: mod.rs  pagination.rs
src/validations/: common.rs  mod.rs  user.rs
tests/: integration_tests.rs  session_request_spec.rs  user_requests_spec.rs
tests/common/: mod.rs
tests/requests/api/: health.rs
tests/requests/api/v1/: mod.rs  session_request_spec.rs  user_requests_spec.rs
